@@ -296,7 +296,6 @@
     <string name="contribute">Zapojit se</string>
     <string name="encryption_chacha20">ChaCha20</string>
     <string name="kdf_AES">AES</string>
-    <string name="kdf_Argon2">Argon2</string>
     <string name="style_choose_title">Vzhled aplikace</string>
     <string name="style_choose_summary">Motiv vzhledu aplikace</string>
     <string name="icon_pack_choose_title">Sada ikon</string>
