@@ -295,7 +295,6 @@
     <string name="contribute">Bidrag</string>
     <string name="encryption_chacha20">ChaCha20</string>
     <string name="kdf_AES">AES</string>
-    <string name="kdf_Argon2">Argon2</string>
     <string name="style_choose_title">Tema</string>
     <string name="style_choose_summary">Tema, der bruges i programmet</string>
     <string name="icon_pack_choose_title">Ikonpakke</string>
