@@ -273,7 +273,6 @@
     <string name="contribute">Contribuir</string>
     <string name="encryption_chacha20">ChaCha20</string>
     <string name="kdf_AES">AES-KDF</string>
-    <string name="kdf_Argon2">Argon2</string>
     <string name="style_choose_title">Tema de aplicación</string>
     <string name="style_choose_summary">Tema utilizado en la aplicación</string>
     <string name="icon_pack_choose_title">Seleccione un paquete de iconos</string>
