@@ -262,7 +262,6 @@
     <string name="encryption_twofish">Twofish</string>
     <string name="encryption_chacha20">ChaCha20</string>
     <string name="kdf_AES">AES</string>
-    <string name="kdf_Argon2">Argon2</string>
     <string-array name="timeout_options">
         <item>5 secondes</item>
         <item>10 secondes</item>
