@@ -317,7 +317,6 @@
     <string name="contribute">Támogatás</string>
     <string name="encryption_chacha20">ChaCha20</string>
     <string name="kdf_AES">AES</string>
-    <string name="kdf_Argon2">Argon2</string>
     <string name="style_choose_title">Alkalmazástéma</string>
     <string name="style_choose_summary">Az alkalmazásban használt téma</string>
     <string name="icon_pack_choose_title">Ikoncsomag</string>
