@@ -192,7 +192,6 @@
     <string name="extended_ASCII">വിപുലീകരിച്ച ASCII</string>
     <string name="icon_pack_choose_summary">ആപ്പിൽ ഉപയോഗിച്ചിരിക്കുന്ന ഐക്കൺ പാക്ക്</string>
     <string name="style_choose_title">അപ്പ്ലിക്കേഷന്റെ തീം</string>
-    <string name="kdf_Argon2">Argon2</string>
     <string name="download_finalization">അന്തിമമാക്കുന്നു. . .</string>
     <string name="html_text_dev_feature_thanks">നിങ്ങളുടെ സംഭാവനയ്ക്ക് ഒരുപാട് നന്ദി.</string>
     <string name="education_unlock_title">ഡാറ്റാബേസ് തുറക്കുക</string>
