@@ -281,7 +281,6 @@
     <string name="contribute">Contribuir</string>
     <string name="encryption_chacha20">ChaCha20</string>
     <string name="kdf_AES">AES</string>
-    <string name="kdf_Argon2">Argon2</string>
     <string name="style_choose_title">Tema da app</string>
     <string name="style_choose_summary">Tema usado na app</string>
     <string name="icon_pack_choose_title">Pacote de ícones</string>
