@@ -406,7 +406,6 @@
     <string name="encryption_twofish">Twofish</string>
     <string name="encryption_chacha20">ChaCha20</string>
     <string name="kdf_AES">AES</string>
-    <string name="kdf_Argon2">Argon2</string>
     <string name="style_choose_title">Tema aplicației</string>
     <string name="style_choose_summary">Tema folosită în aplicație</string>
     <string name="icon_pack_choose_title">Pachet de pictograme</string>
