@@ -145,7 +145,6 @@
     <string name="clipboard_error_clear">无法清空剪切板</string>
     <string name="encryption_chacha20">ChaCha20</string>
     <string name="kdf_AES">AES</string>
-    <string name="kdf_Argon2">Argon2</string>
     <string name="style_choose_title">主题</string>
     <string name="icon_pack_choose_title">图标包</string>
     <string name="icon_pack_choose_summary">程序中使用的图标包</string>
