@@ -509,7 +509,8 @@
     <string name="encryption_twofish">Twofish</string>
     <string name="encryption_chacha20">ChaCha20</string>
     <string name="kdf_AES">AES</string>
-    <string name="kdf_Argon2">Argon2</string>
+    <string name="kdf_Argon2d">Argon2d</string>
+    <string name="kdf_Argon2id">Argon2id</string>
     <string-array name="timeout_options">
         <item>5 seconds</item>
         <item>10 seconds</item>
