@@ -1,1 +1,2 @@
  * Fix small bugs #812
+ * Argon2ID implementation #791
